--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
+    "framer-motion": "^12.23.11",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
