--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@rive-app/react-canvas": "^4.22.1",
     "array-move": "^4.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
