--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
     "framer-motion": "^12.23.11",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.3.0",
     "next": "14.0.4",
