--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@rive-app/canvas": "^2.30.4",
@@ -31,11 +32,14 @@
     "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
-    "zod": "^4.0.10"
+    "zod": "^4.0.10",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
