--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.3.0",
+    "mongoose": "^9.0.0",
     "next": "14.0.4",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
