--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.3.6",
