--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@rive-app/canvas": "^2.30.4",
     "@rive-app/react-canvas": "^4.22.1",
     "@types/canvas-confetti": "^1.9.0",
