idk some java stuff

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "android": "npx cap run android",
+    "open:android": "npx cap open android",
     "sync": "npx cap sync"
   },
   "dependencies": {
